Bug fix: fill background image on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@ body {
   margin: 0;
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(assets/img/2022/background-1-landscape.jpg) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 @font-face {
   font-family: "Classico";
   src: url("./assets/fonts/classico.ttf") format("truetype");
